examples/test/testpolicy18622.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18622
  namespace: namespace422
spec:
  podSelector:
    matchLabels:
      key6: value44
      key35: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value4
          key30: value0
      podSelector:
        matchLabels:
          key41: value40
          key30: value36
